# parts_finder

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260413_0001_initial_schema.py  20260414_0002_product_draft.py  20260415_0003_uploaded_asset.py  20260416_0004_product_source_document.py  20260417_0005_part_image_upload.py  20260418_0006_product_spec_import.py  20260419_0007_snapshot_part_display_orderable.py
src/shade_catalog/: __init__.py  main.py  seed_metal_blinds.py
src/shade_catalog/api/: deps.py
src/shade_catalog/api/v1/: admin.py  assets_public.py  catalog.py  router.py  search.py
src/shade_catalog/core/: config.py
src/shade_catalog/db/: session.py
src/shade_catalog/models/: __init__.py  audit_log.py  category.py  enums.py  part.py  product.py  product_draft.py  product_source_document.py  product_spec_import.py  snapshot.py  uploaded_asset.py  user.py
src/shade_catalog/schemas/: __init__.py  admin.py  catalog.py
src/shade_catalog/services/: admin_products.py  catalog_public.py  local_storage.py  product_draft.py  publish.py  search_public.py  source_documents_admin.py  spec_import_admin.py  spec_parser.py  upload_assets.py
static/: interactive_diagram.html
tests/: test_health.py
